--- a/TestSuit/TestSuit/TestSuit.vcxproj.filters
+++ b/TestSuit/TestSuit/TestSuit.vcxproj.filters
@@ -90,6 +90,9 @@
     <ClInclude Include="TestInst\TestIocpExample.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="TestInst\TestEvent.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
