--- a/base/base/base.vcxproj
+++ b/base/base/base.vcxproj
@@ -316,6 +316,8 @@
     <ClInclude Include="..\common\memorypool\memorypool.h" />
     <ClInclude Include="..\common\net\Defs\FS_NetDefs.h" />
     <ClInclude Include="..\common\net\Defs\IocpDefs.h" />
+    <ClInclude Include="..\common\net\Impl\FS_Server.h" />
+    <ClInclude Include="..\common\net\Impl\FS_ServerImpl.h" />
     <ClInclude Include="..\common\net\Impl\FS_TcpServer.h" />
     <ClInclude Include="..\common\net\Impl\FS_TcpServerImpl.h" />
     <ClInclude Include="..\common\net\Impl\Iocp\Example.h" />
@@ -403,6 +405,7 @@
     <ClCompile Include="..\common\memorypool\Interface\IMemoryPool.cpp" />
     <ClCompile Include="..\common\memorypool\Interface\IMemoryPoolMgr.cpp" />
     <ClCompile Include="..\common\net\Defs\IocpDefs.cpp" />
+    <ClCompile Include="..\common\net\Impl\FS_Server.cpp" />
     <ClCompile Include="..\common\net\Impl\FS_TcpServer.cpp" />
     <ClCompile Include="..\common\net\Impl\Iocp\Example.cpp" />
     <ClCompile Include="..\common\net\Impl\Iocp\FS_Iocp.cpp" />
