--- a/base/base/base.vcxproj.filters
+++ b/base/base/base.vcxproj.filters
@@ -822,12 +822,6 @@
     <ClInclude Include="..\common\net\Impl\FS_ClientImpl.h">
       <Filter>common\net\Impl</Filter>
     </ClInclude>
-    <ClInclude Include="..\common\net\Impl\FS_IocpServer.h">
-      <Filter>common\net\Impl</Filter>
-    </ClInclude>
-    <ClInclude Include="..\common\net\Impl\FS_IocpServerImpl.h">
-      <Filter>common\net\Impl</Filter>
-    </ClInclude>
     <ClInclude Include="..\common\objpool\Defs\FS_ObjPoolDefs.h">
       <Filter>common\objpool\Defs</Filter>
     </ClInclude>
@@ -850,6 +844,18 @@
       <Filter>common\net\Impl</Filter>
     </ClInclude>
     <ClInclude Include="..\common\net\Impl\FS_IocpImpl.h">
+      <Filter>common\net\Impl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\common\net\Impl\FS_IocpMsgTransferServer.h">
+      <Filter>common\net\Impl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\common\net\Impl\FS_IocpMsgTransferServerImpl.h">
+      <Filter>common\net\Impl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\common\net\Impl\FS_MainIocpServer.h">
+      <Filter>common\net\Impl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\common\net\Impl\FS_MainIocpServerImpl.h">
       <Filter>common\net\Impl</Filter>
     </ClInclude>
   </ItemGroup>
@@ -1070,13 +1076,16 @@
     <ClCompile Include="..\common\net\Impl\FS_Client.cpp">
       <Filter>common\net\Impl</Filter>
     </ClCompile>
-    <ClCompile Include="..\common\net\Impl\FS_IocpServer.cpp">
-      <Filter>common\net\Impl</Filter>
-    </ClCompile>
     <ClCompile Include="..\common\net\Defs\FS_NetBuffer.cpp">
       <Filter>common\net\Defs</Filter>
     </ClCompile>
     <ClCompile Include="..\common\net\Impl\FS_Iocp.cpp">
+      <Filter>common\net\Impl</Filter>
+    </ClCompile>
+    <ClCompile Include="..\common\net\Impl\FS_IocpMsgTransferServer.cpp">
+      <Filter>common\net\Impl</Filter>
+    </ClCompile>
+    <ClCompile Include="..\common\net\Impl\FS_MainIocpServer.cpp">
       <Filter>common\net\Impl</Filter>
     </ClCompile>
   </ItemGroup>
