--- a/base/base/base.vcxproj
+++ b/base/base/base.vcxproj
@@ -258,6 +258,8 @@
     <ClInclude Include="..\common\component\Impl\FS_ListImpl.h" />
     <ClInclude Include="..\common\component\Impl\FS_Random.h" />
     <ClInclude Include="..\common\component\Impl\FS_RandomImpl.h" />
+    <ClInclude Include="..\common\component\Impl\FS_Stream.h" />
+    <ClInclude Include="..\common\component\Impl\FS_StreamImpl.h" />
     <ClInclude Include="..\common\component\Impl\FS_String.h" />
     <ClInclude Include="..\common\component\Impl\FS_StringImpl.h" />
     <ClInclude Include="..\common\component\Impl\FS_ThreadPool.h" />
@@ -387,6 +389,7 @@
     <ClCompile Include="..\common\component\Impl\FS_CpuInfo.cpp" />
     <ClCompile Include="..\common\component\Impl\FS_List.cpp" />
     <ClCompile Include="..\common\component\Impl\FS_Random.cpp" />
+    <ClCompile Include="..\common\component\Impl\FS_Stream.cpp" />
     <ClCompile Include="..\common\component\Impl\FS_String.cpp" />
     <ClCompile Include="..\common\component\Impl\FS_ThreadPool.cpp" />
     <ClCompile Include="..\common\component\Impl\GlobalInitialize.cpp" />
