--- a/TestSuit/TestSuit/TestSuit.vcxproj.filters
+++ b/TestSuit/TestSuit/TestSuit.vcxproj.filters
@@ -93,9 +93,15 @@
     <ClInclude Include="TestInst\TestEvent.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="TestInsts.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="TestInsts.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
