--- a/TestSuit/TestSuit/TestSuit.vcxproj
+++ b/TestSuit/TestSuit/TestSuit.vcxproj
@@ -168,6 +168,7 @@
     <ClInclude Include="TestInst\TestMemoryPool.h" />
     <ClInclude Include="TestInst\TestObjPool.h" />
     <ClInclude Include="TestInst\TestRandom.h" />
+    <ClInclude Include="TestInst\TestServer.h" />
     <ClInclude Include="TestInst\TestString.h" />
     <ClInclude Include="TestInst\TestSystemUtil.h" />
     <ClInclude Include="TestInst\TestThreadPool.h" />
@@ -180,6 +181,7 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="TestInsts.cpp" />
+    <ClCompile Include="TestInst\TestServer.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
