--- a/base/base/base.vcxproj.filters
+++ b/base/base/base.vcxproj.filters
@@ -888,6 +888,12 @@
     <ClInclude Include="..\common\net\Defs\HeartBeatCompImpl.h">
       <Filter>common\net\Defs</Filter>
     </ClInclude>
+    <ClInclude Include="..\common\net\Defs\FS_NetBufferArray.h">
+      <Filter>common\net\Defs</Filter>
+    </ClInclude>
+    <ClInclude Include="..\common\net\Defs\FS_NetBufferArrayImpl.h">
+      <Filter>common\net\Defs</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -1126,6 +1132,9 @@
     </ClCompile>
     <ClCompile Include="..\common\net\Impl\FS_MsgWriteStream.cpp">
       <Filter>common\net\Impl</Filter>
+    </ClCompile>
+    <ClCompile Include="..\common\net\Defs\FS_NetBufferArray.cpp">
+      <Filter>common\net\Defs</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
