--- a/base/base/base.vcxproj
+++ b/base/base/base.vcxproj
@@ -322,7 +322,9 @@
     <ClInclude Include="..\common\memorypool\Interface\IMemoryPoolMgr.h" />
     <ClInclude Include="..\common\memorypool\memorypool.h" />
     <ClInclude Include="..\common\net\Defs\FS_NetBuffer.h" />
+    <ClInclude Include="..\common\net\Defs\FS_NetBufferArrayImpl.h" />
     <ClInclude Include="..\common\net\Defs\FS_NetBufferImpl.h" />
+    <ClInclude Include="..\common\net\Defs\FS_NetBufferArray.h" />
     <ClInclude Include="..\common\net\Defs\FS_NetDefs.h" />
     <ClInclude Include="..\common\net\Defs\HeartBeatComp.h" />
     <ClInclude Include="..\common\net\Defs\HeartBeatCompImpl.h" />
@@ -429,6 +431,7 @@
     <ClCompile Include="..\common\memorypool\Interface\IMemoryPool.cpp" />
     <ClCompile Include="..\common\memorypool\Interface\IMemoryPoolMgr.cpp" />
     <ClCompile Include="..\common\net\Defs\FS_NetBuffer.cpp" />
+    <ClCompile Include="..\common\net\Defs\FS_NetBufferArray.cpp" />
     <ClCompile Include="..\common\net\Defs\IocpDefs.cpp" />
     <ClCompile Include="..\common\net\Impl\FS_Client.cpp" />
     <ClCompile Include="..\common\net\Impl\FS_Iocp.cpp" />
